[package]
name = "pow-summon-discordbot"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "=1.39.3", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]
version = "=0.12.2"

[build-dependencies]
git2 = { version = "=0.19.0", default-features = false }

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
