[package]
name = "pow-summon-discordbot"
version = "1.1.26"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "=1.44.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "rustls_backend",
]
version = "=0.12.4"

[build-dependencies]
gix = { version = "=0.72.1", default-features = false, features = ["revision", "status"] }

[lints.clippy]
pedantic = "warn"

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
